# bevy_mod_billboard

./: Cargo.toml  README.md
examples/: depth.rs  lock_rotation.rs  lock_y.rs  stress_test.rs  text.rs  texture.rs  transform_propagation.rs
src/: lib.rs  pipeline.rs  plugin.rs  text.rs  texture.rs
tests/: text_usage.rs
